# Caridina

./: Cargo.toml  README.md  small_word_list.txt
src/: json_types.rs  main.rs
