[package]
name = "scrabble_ai"
version = "0.1.0"
authors = ["Andrew Polican <andrew.p@aptus.aero>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.10.0"
rocket = "0.4.7"
rand = "0.8"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json"]

[profile.dev]
opt-level = 3

